@@ -1,6 +1,7 @@
 openmediavault (7.7.14-1) stable; urgency=medium
 
-  *
+  * Make sure specific domain names, e.g. `local` or `test`, can't be
+    applied via RPC.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 Aug 2025 12:40:01 +0200
 
